--- a/website/templates/home/home.html
+++ b/website/templates/home/home.html
@@ -1,10 +1,13 @@
 {% extends 'base/base.html' %}
 
 {% block content %}
-    <div clas="row" style="margin-bottom: 100px;">
-       <div class="col-xs-offset-3 col-lg-pull-6">
+    <div clas="row" style="margin-bottom: 50px;margin-top: 50px;">
+       <div class="col-xs-offset-3 col-lg-pull-5">
            <h1>Welcome {{ user.get_full_name|default:user.username }}!</h1>
        </div>
+    </div>
+    <div class="row">
+       <button id="share">Share</button>
     </div>
    <div class="row">
 
