--- a/website/templates/base/base.html
+++ b/website/templates/base/base.html
@@ -57,25 +57,33 @@
            method: 'GET',
            success: function( data ) {
                 var domain = location.hostname;
-
+                console.log(domain+'/'+data.imagepath);
                FB.init({
-          appId      : '855735074546415',
-          xfbml      : true,
-          version    : 'v2.5'
-        });
-               FB.ui({
+                  appId      : '855735074546415',
+                  xfbml      : true,
+                  version    : 'v2.5'
+                });
+               /*FB.ui({
                   method: `share`,
                   name: 'Facebook Dialogs',
-                  href: $(location).attr('href'),
+                  href:'http://stefanocampese.xyz',
                   link: 'https://developers.facebook.com/docs/dialogs/',
-                  picture: '',//'https://www.gravatar.com/avatar/73f94a33f2e3cbf0b36eddcee068283d?s=32&d=identicon&r=PG',//domain+'/'+data.imagepath,
+                  picture: domain+'/'+data.imagepath,
                   caption: 'Best photos',
-              },
+              },*/
+
+               FB.api('https://graph.facebook.com/me/photos/uploaded?access_token='+data.token, 'post', { url: 'http://'+domain+''+data.imagepath, message:'oo' }, function(response) {
+                            if (!response || response.error) {
+                                //alert('Error occured: ' + JSON.stringify(response.error));
+                            } else {
+                                //alert('Post ID: ' + response);
+                            }
+                }, {scope: 'publish_stream'},
               function (response) {
                   if (response && response.post_id) {
-                      alert('success');
+                      console.log('success');
                   } else {
-                     alert('error');
+                     console.log(response);
                   }
               }
             );
