--- a/website/templates/home/index.html
+++ b/website/templates/home/index.html
@@ -5,8 +5,13 @@
 <div class="col-xs-12">
 
    {% if user.is_anonymous %}
-       <div class="col-xs-4 col-xs-offset-5">
-       <a class="btn btn-facebook" href="{% url 'social:begin' 'facebook' %}?next=/home">Login with Facebook</a>
+
+        <div style="text-align:center">
+           <h2>Welcome to Image Scraper app</h2>
+        </div>
+       <div class="col-xs-4 col-md-offset-5 col-xs-offset-4">
+
+        <a class="btn btn-facebook" href="{% url 'social:begin' 'facebook' %}?next=/home">Login with Facebook</a>
 
      </div>
     {% else %}
