--- a/website/templates/base/base.html
+++ b/website/templates/base/base.html
@@ -4,13 +4,13 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <title>{% block title %}Image Scraper App{% endblock %}</title>
-
+   <title>{% block title %}Photo App{% endblock %}</title>
+    {% load staticfiles %}
    <!-- Bootstrap -->
    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
    <link href="/static/css/bootstrap-theme.min.css" rel="stylesheet">
    <link href="/static/css/bootstrap-social.css" rel="stylesheet">
-     {% load staticfiles %}
+
    <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 
    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -29,62 +29,8 @@
     </div>
  </div>
 
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-   <script src="/static/js/bootstrap.min.js"></script>
-   <script>
-      window.fbAsyncInit = function() {
-        FB.init({
-          appId      : '855735074546415',
-          xfbml      : true,
-          version    : 'v2.5'
-        });
-      };
-
-      (function(d, s, id){
-         var js, fjs = d.getElementsByTagName(s)[0];
-         if (d.getElementById(id)) {return;}
-         js = d.createElement(s); js.id = id;
-         js.src = "//connect.facebook.net/en_US/sdk.js";
-         fjs.parentNode.insertBefore(js, fjs);
-       }(document, 'script', 'facebook-jssdk'));
-
-
-      jQuery('#share').on('click',function() {
-
-          jQuery.ajax({
-              url: '/post/',
-              dataType: "json",
-              method: 'GET',
-              success: function (data) {
-                  var domain = location.hostname;
-                  console.log('http://' + domain + ':8000' + data.imagepath);
-                  FB.init({
-                      appId: '855735074546415',
-                      xfbml: true,
-                      version: 'v2.5'
-                  });
-
-                  FB.ui({
-                      method: `share`,
-                      name: 'Facebook Dialogs',
-                      href: 'http://stefanocampese.xyz',
-                      link: 'https://developers.facebook.com/docs/dialogs/',
-                      picture: 'http://' + domain + ':8000' + data.imagepath,
-                      caption: 'Best photos',
-                  }, function (response) {
-                      if (response && response.post_id) {
-                          console.log('success');
-                      } else {
-                          console.log(response);
-                      }
-                  });
-
-              }
-      });
-
-      });
-
-
-    </script>
+ <script src="/static/js/jquery-2.2.1.js"></script>
+ <script src="/static/js/bootstrap.min.js"></script>
+ <script src="/static/js/main.js"></script>
  </body>
 </html>
