--- a/website/templates/shared/navbar.html
+++ b/website/templates/shared/navbar.html
@@ -1,7 +1,7 @@
 {% if user and not user.is_anonymous %}
         <nav class="navbar navbar-default">
           <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
+
             <div class="navbar-header">
               <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
@@ -12,17 +12,17 @@
               <a class="navbar-brand" href="#"><span class="fa fa-birthday-cake"></span></a>
             </div>
 
-            <!-- Collect the nav links, forms, and other content for toggling -->
+
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Images <span class="sr-only">(current)</span></a></li>
+
               </ul>
 
               <ul class="nav navbar-nav navbar-right">
                 <li><a href="{% url 'auth:logout' %}?next=/">Logout</a></li>
               </ul>
-            </div><!-- /.navbar-collapse -->
-          </div><!-- /.container-fluid -->
+            </div>
+          </div>
         </nav>
 {% else %}
 
